correcting body overflow

--- a/css/glb.css
+++ b/css/glb.css
@@ -2,7 +2,7 @@ body {
 	font-family:Helvetica Neue, Verdana, Geneva, sans-serif;
 	margin:0;
 	color:#000;
-	overflow:hidden;
+	overflow-x:hidden;
 	/*background:rgb(250, 255, 250);*/
 }
 
